# autoreg-for-homies

./: .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  validate_ci.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml  security.yml  test.yml
auto_registration_system/: auto_registration_system.py  command.py  model.py  term.py
auto_registration_system/command_handler/: handler_aka.py  handler_allplayable.py  handler_dereg.py  handler_new.py
auto_registration_system/data_structure/: admin_manager.py  registration_data.py  reservation.py  slot_manager.py
auto_registration_system/exception/: error_maker.py  exception_name_conflict.py  exception_syntax_error.py  exceptions.py
telegram_adapter/: telegram_command_handler.py
tests/: README.md  test_new_handler.py  test_slot_manager.py
